# APIRest

./: .gitignore  CMakeLists.txt  conanfile.py
include/: APIRestRequestHandlerFactory.h  APIRestServerApplication.h  Router.h
include/Route/: APIRestEndpoints.h  APIRestRequestHandler.h
include/configuration/: ConfigurationKeys.h
resource/: APIRest.properties  APIRest.properties.in
src/: APIRestErrorHandler.cpp  APIRestErrorHandler.h  APIRestRequestHandlerFactory.cpp  APIRestRequestHandlerFactory.h  APIRestServerApplication.cpp  APIRestServerApplication.h  MyDetailedHandler.cpp  MyDetailedHandler.h  MyErrorHandler.cpp  MyErrorHandler.h  Router.cpp
src/Configuration/: APIRestConfigurationKeys.h
src/Route/: APIRestEndpoints.cpp  APIRestEndpoints.h  APIRestFilePartHandler.cpp  APIRestFilePartHandler.h  APIRestRequestHandler.cpp  APIRestRequestHandler.h  JSONKeysVerify.h
test_package/: CMakeLists.txt  conanfile.py
test_package/resources/: signature.p7s
test_package/resources/configuration/: APIRest.properties
test_package/src/: example.cpp
test_package/src/UnitTests/include/: APIRestErrorHandlerTest.h  APIRestServerTest.h  APIRestServerTestMacros.h
test_package/src/UnitTests/src/: APIRestErrorHandlerTest.cpp  APIRestServerTest.cpp
